fixed squished photos

--- a/src/htdocs/contact.css
+++ b/src/htdocs/contact.css
@@ -5,3 +5,7 @@
 .separator > li:first-child {
   padding-top: 0;
 }
+
+img.column.mobile-one-of-four {
+  width: 110px;
+}
